--- a/scot4/values.yaml
+++ b/scot4/values.yaml
@@ -59,7 +59,7 @@ scot4:
     # api container image repository path
     repository: ghcr.io/sandialabs/scot4-api
     # api container image tag
-    tag: main
+    tag: "4.2.1"
     # first superuser's email when creating account
     firstSuperUserEmail: "scot-admin@example.com"
     # first superuser's username
@@ -97,7 +97,7 @@ scot4:
     # frontend container image repository path
     repository: ghcr.io/sandialabs/scot4-web-app
     # frontend container image tag
-    tag: main
+    tag: "4.2.1"
     # url where the frontend will be accessible
     externalHostName: "scot4.example.com"
     # name of k8s secret that holds tls crt and key, should not need to change
@@ -109,7 +109,7 @@ scot4:
     # flair container image repository path
     repository: ghcr.io/sandialabs/scot4-flair
     # flair container image tag
-    tag: main
+    tag: "4.2.0"
     containerPort: 3001
     apiDatabaseName: "scot4"
     apiDatabaseUser: "scot4-db-user"
@@ -144,7 +144,7 @@ scot4:
       # inbox processor container image repository path
       repository: ghcr.io/sandialabs/scot4-inbox
       # inbox processor container image tag
-      tag: main
+      tag: "4.2.0"
       imagePullPolicy: "Always"
       imapSslVerify: 1
       scotApiSslVerify: 1
