Update all templates to support optional repo auth

--- a/scot4/templates/api/scot4-api-db-management-jobs.yaml
+++ b/scot4/templates/api/scot4-api-db-management-jobs.yaml
@@ -39,6 +39,9 @@ spec:
         - secretRef:
             name: scot4-env-secrets
       {{- end }}
+      {{- if .Values.scot4.common.imagePullSecret }}
       imagePullSecrets:
-      - name: scot4-image-pull-secret 
+      - name: {{ .Values.scot4.common.imagePullSecret }}
+      {{- end }}
+
 {{- end }}
