--- a/scot4/templates/flair/scot4-flair-deployment.yaml
+++ b/scot4/templates/flair/scot4-flair-deployment.yaml
@@ -36,7 +36,7 @@ spec:
         - configMapRef:
             name: scot4-flair-env-config
         volumeMounts:
-        - name: scot4-flair-opt-storage 
+        - name: scot4-flair-opt-storage
           mountPath: /opt/flair/var
       {{- end }}
       containers:
@@ -53,7 +53,7 @@ spec:
         - containerPort: {{ .Values.scot4.flair.containerPort }}
           name: scot4-flair
         volumeMounts:
-        - name: scot4-flair-opt-storage 
+        - name: scot4-flair-opt-storage
           mountPath: /opt/flair/var
           readOnly: false
       - image: "{{ .Values.scot4.flair.repository }}:{{ .Values.scot4.flair.tag }}"
@@ -66,13 +66,15 @@ spec:
             name: scot4-flair-env-config
         command: ["/opt/flair/script/Flair", "minion", "worker", "-m", "production", "-j", "{{ .Values.scot4.flair.numMinionWorkers }}"]
         volumeMounts:
-        - name: scot4-flair-opt-storage 
+        - name: scot4-flair-opt-storage
           mountPath: /opt/flair/var
           readOnly: false
+      {{- if .Values.scot4.common.imagePullSecret }}
       imagePullSecrets:
-      - name: scot4-image-pull-secret 
+      - name: {{ .Values.scot4.common.imagePullSecret }}
+      {{- end }}
       volumes:
-      - name: scot4-flair-opt-storage 
+      - name: scot4-flair-opt-storage
         persistentVolumeClaim:
           claimName: scot4-flair-opt-pv-claim
       securityContext:
