--- a/scot4/templates/inbox/scot4-inbox-events.yaml
+++ b/scot4/templates/inbox/scot4-inbox-events.yaml
@@ -52,8 +52,10 @@ spec:
             volumeMounts:
             - name: scot4-inbox-events-data-storage
               mountPath: /opt/scot4-inbox/var
+          {{- if .Values.scot4.common.imagePullSecret }}
           imagePullSecrets:
-          - name: scot4-image-pull-secret
+          - name: {{ .Values.scot4.common.imagePullSecret }}
+          {{- end }}
           volumes:
           - name: scot4-inbox-events-data-storage
             persistentVolumeClaim:
@@ -94,4 +96,3 @@ data:
   S4INBOX_SCOT_INPUT_QUEUE: "{{ .Values.scot4.inbox.event.inputQueue }}"
   S4INBOX_MAIL_CLIENT_CLASS: "{{ .Values.scot4.inbox.event.clientClass }}"
  {{- end }}
-  
