--- a/scot4/Chart.yaml
+++ b/scot4/Chart.yaml
@@ -4,3 +4,8 @@ description: "Sandia Cyber Omni Tracker v4"
 type: application
 version: 1.0.1
 appVersion: "4.2.0"
+
+dependencies:
+  - name: meilisearch
+    repository: https://meilisearch.github.io/meilisearch-kubernetes
+    version: 0.11.0
