--- a/scot4/templates/frontend/scot4-frontend-deployment.yaml
+++ b/scot4/templates/frontend/scot4-frontend-deployment.yaml
@@ -27,7 +27,9 @@ spec:
     metadata:
       labels:
         app: scot4-frontend
+        {{- if eq .Values.scot4.force_pod_redeploy "true" }}
         date: "{{ now | unixEpoch }}"
+        {{- end }}
     spec:
       containers:
       - image: "{{ .Values.scot4.frontend.repository }}:{{ .Values.scot4.frontend.tag }}"
