--- a/scot4/templates/api/scot4-api-db-management-jobs.yaml
+++ b/scot4/templates/api/scot4-api-db-management-jobs.yaml
@@ -31,7 +31,7 @@ spec:
       {{- if eq .Values.scot4.api.fakedata "true" }}
       - name: scot4-api-fake-data
         imagePullPolicy: {{ .Values.scot4.api.imagePullPolicy }}
-        image: "{{ .Values.scot4.api.repository }}-util:{{ .Values.scot4.api.tag }}"
+        image: "{{ .Values.scot4.api.utilRepository }}:{{ .Values.scot4.api.utilTag }}"
         command: ["python", "./tests/utils/initial_data.py"]
         envFrom:
         - configMapRef:
