--- a/scot4/templates/api/scot4-api-db-management-jobs.yaml
+++ b/scot4/templates/api/scot4-api-db-management-jobs.yaml
@@ -39,9 +39,6 @@ spec:
         - secretRef:
             name: scot4-env-secrets
       {{- end }}
-      {{- if .Values.scot4.common.imagePullSecret }}
       imagePullSecrets:
-      - name: {{ .Values.scot4.common.imagePullSecret }}
-      {{- end }}
-
+      - name: scot4-image-pull-secret 
 {{- end }}
