--- a/scot4/templates/frontend/scot4-frontend-deployment.yaml
+++ b/scot4/templates/frontend/scot4-frontend-deployment.yaml
@@ -41,7 +41,5 @@ spec:
         ports:
         - containerPort: 8080
           name: scot4-frontend
-      {{- if .Values.scot4.common.imagePullSecret }}
       imagePullSecrets:
-      - name: {{ .Values.scot4.common.imagePullSecret }}
-      {{- end }}
+      - name: scot4-image-pull-secret 
