--- a/scot4/templates/frontend/scot4-frontend-ingress.yaml
+++ b/scot4/templates/frontend/scot4-frontend-ingress.yaml
@@ -3,9 +3,7 @@ kind: Ingress
 metadata:
   name: scot4-tls-ingress
   annotations:
-    {{- if eq .Values.scot4.frontend.enableTraefikMiddleware "true" }}
-    traefik.ingress.kubernetes.io/router.middlewares: scot4-strip-flair-prefix@kubernetescrd, scot4-http-redirect@kubernetescrd
-    {{- end }}
+    traefik.ingress.kubernetes.io/router.middlewares: scot4-strip-flair-prefix@kubernetescrd, scot4-http-redirect@kubernetescrd, scot4-hsts-enable@kubernetescrd, scot4-gzip-compress@kubernetescrd
 spec:
   tls:
   - hosts:
@@ -37,8 +35,17 @@ spec:
             port:
               number: {{ .Values.scot4.flair.containerPort }}
 ---
-{{- if eq .Values.scot4.frontend.enableTraefikMiddleware "true" }}
-apiVersion: {{ .Values.scot4.frontend.traefikMiddlewareVersion }}
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: gzip-compress
+  namespace: scot4
+spec:
+  compress:
+    excludedContentTypes:
+      - text/event-stream
+---
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: strip-flair-prefix
@@ -48,7 +55,7 @@ spec:
     prefixes:
       - /flair-ui
 ---
-apiVersion: {{ .Values.scot4.frontend.traefikMiddlewareVersion }}
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: http-redirect
@@ -57,14 +64,24 @@ spec:
   redirectScheme:
     scheme: https
     permanent: true
-{{- end }}
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: hsts-enable
+  namespace: scot4
+spec:
+  headers:
+    forceSTSHeader: true
+    stsSeconds: 315360000
+    stsIncludeSubdomains: true
 {{- if eq .Values.scot4.redirect.enabled "true" }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    traefik.ingress.kubernetes.io/router.middlewares: scot4-strip-flair-prefix@kubernetescrd, scot4-http-redirect@kubernetescrd, scot4-redirect-scot@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: scot4-strip-flair-prefix@kubernetescrd, scot4-http-redirect@kubernetescrd, scot4-hsts-enable@kubernetescrd, scot4-gzip-compress@kubernetescrd, scot4-redirect-scot@kubernetescrd
   name: ingress-scot-redirect
   namespace: scot4
 spec:
@@ -99,7 +116,7 @@ spec:
               number: {{ .Values.scot4.flair.containerPort }}
 ---
 # Redirect with domain replacement
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: redirect-scot
