api pod bug fix

--- a/scot4/secret-skeletons/secrets.yaml
+++ b/scot4/secret-skeletons/secrets.yaml
@@ -10,7 +10,7 @@ stringData:
   FLAIR_API_KEY: <SCOT Flair API Key>
   SEARCH_API_KEY: <Meili Search Master Key>
   ENRICHMENT_PASSWORD: <Cyberflow Password>
-  SQLALCHEMY_DATABASE_URI: "mysql+mysqlconnector://scot4-db-user:PLACEHOLDER@scot4-db-service/scot4"
+  SQLALCHEMY_DATABASE_URI: "mysql+mysqldb://scot4-db-user:PLACEHOLDER@scot4-db-service/scot4"
   ROOT_DB_PASSWORD: <Root DB Password>
   FLAIR_DB_PASSWORD: <Flair DB Password>
   API_DB_PASSWORD: <API DB Password>
