Explicitly set sql_mode for consistency

--- a/scot4/templates/database/scot4-database-config.yaml
+++ b/scot4/templates/database/scot4-database-config.yaml
@@ -17,4 +17,5 @@ data:
     disable_log_bin
     bind-address = 0.0.0.0
     explicit_defaults_for_timestamp=1
+    sql_mode="NO_ENGINE_SUBSTITUTION" 
  {{- end }}
